force-app/main/default/objects/bofc__BOFCObjectLimApex__c/bofc__BOFCObjectLimApex__c.object-meta.xml
<CustomObject>
    <label>BOFCObjectLimApex</label>
    <nameField>
        <displayFormat>BOI-{0000}</displayFormat>
        <label>BOFCObjectLimits Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>BOFCObjectLimApexs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>