force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Active_Lookup_Filters_max__c.field-meta.xml
<CustomField>
    <fullName>bofc__Active_Lookup_Filters_max__c</fullName>
    <label>#Active Lookup Filters (max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>