force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Active_Validation_Rules_used__c.field-meta.xml
<CustomField>
    <fullName>bofc__Active_Validation_Rules_used__c</fullName>
    <label>#Active Validation Rules (used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>