force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Active_Workflow_Rules_used__c.field-meta.xml
<CustomField>
    <fullName>bofc__Active_Workflow_Rules_used__c</fullName>
    <label>#Active Workflow Rules (used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>