force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Approval_Processes_used__c.field-meta.xml
<CustomField>
    <fullName>bofc__Approval_Processes_used__c</fullName>
    <label>#Approval Processes (used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>