force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Custom_Relationship_Fields_used__c.field-meta.xml
<CustomField>
    <fullName>bofc__Custom_Relationship_Fields_used__c</fullName>
    <label>#Custom Relationship Fields (used)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>