force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__ObID__c.field-meta.xml
<CustomField>
    <fullName>bofc__ObID__c</fullName>
    <label>ObID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>