force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__ObName__c.field-meta.xml
<CustomField>
    <fullName>bofc__ObName__c</fullName>
    <label>ObName</label>
    <length>255</length>
    <type>Text</type>
</CustomField>