force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Rollup_Summary_Fields_max__c.field-meta.xml
<CustomField>
    <fullName>bofc__Rollup_Summary_Fields_max__c</fullName>
    <label>#Rollup Summary Fields (max)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>