force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Sharing_Rules_Both_OwnerCriteria_max__c.field-meta.xml
<CustomField>
    <fullName>bofc__Sharing_Rules_Both_OwnerCriteria_max__c</fullName>
    <label>#Sharing Rules (Both Owner-Criteria) max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>