force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__Total_Workflow_Rules_max__c.field-meta.xml
<CustomField>
    <fullName>bofc__Total_Workflow_Rules_max__c</fullName>
    <label>#Total Workflow Rules max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>