force-app/main/default/objects/bofc__BOFCObjectLimApex__c/fields/bofc__VLOOKUP_Functions_max__c.field-meta.xml
<CustomField>
    <fullName>bofc__VLOOKUP_Functions_max__c</fullName>
    <label>#VLOOKUP Functions max</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>